//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.command;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.command";
option java_outer_classname = "CommandCommandsProto";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/test/command/project.proto";

message CmdCreateProject {
    ProjectId project_id = 1;
}

message CmdStartProject {
    ProjectId project_id = 1;
}

message CmdAddTask {
    ProjectId project_id = 1;
    Task task = 2;
}

message CmdRemoveTask {
    ProjectId project_id = 1;
    Task task = 2;
}

// A command to create a project for duplicate command tests.
//
message DCmdCreateProject {
    ProjectId project_id = 1;
}

// A command to create a project to test the command posting order.
//
// This command is to be sent first.
//
message FirstCmdCreateProject {

    ProjectId id = 1;

    string name = 2;
}

// A command to start a project to test the command posting order.
//
// This command is to be sent second, as a part of the `FirstCmdCreateProject` handling.
//
message SecondCmdStartProject {

    ProjectId id = 1;
}

message CmdCreateTask {
    TaskId task_id = 1;
    Task task = 2;
}

message CmdAssignTask {
    TaskId task_id = 1;
    core.UserId assignee = 2;
}

message CmdSetTaskDescription {
    TaskId task_id = 1;
    string description = 3;
}
